--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:orientation="horizontal"
     >
-
-
-
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
         android:layout_width="88dp"
         android:layout_height="88dp"
-        android:scaleType="centerCrop"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/grace"
         app:civ_border_color="@color/colorAccent"
         app:civ_border_width="2dp" />
@@ -26,20 +22,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:paddingLeft="16dp"
-        >
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:paddingStart="16dp">
 
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@android:color/black"
+            android:layout_marginTop="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="@android:color/black"
             android:textStyle="normal"
             tools:text="Grace Mathole" />
 
@@ -52,33 +47,30 @@
                 android:id="@+id/txt_institution"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="top"
-                android:textColor="@android:color/black"
+                android:layout_weight="1"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-                tools:text="Innovation hub"
-                >
+                android:textColor="@android:color/black"
+                tools:text="Innovation hub">
 
             </TextView>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="10dp"
+                android:layout_weight="1"
                 android:src="@drawable/ic_job" />
 
             <TextView
                 android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="top"
-                android:textColor="@android:color/black"
+                android:layout_weight="1"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-                tools:text="Management"
-                >
-            </TextView>
+                android:textColor="@android:color/black"
+                tools:text="Management"/>
 
         </LinearLayout>
     </LinearLayout>
