Chat activity and chat xml

--- a/app/src/main/res/layout/activity_support_groups.xml
+++ b/app/src/main/res/layout/activity_support_groups.xml
@@ -123,6 +123,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:onClick="learn"
+                    android:id="@+id/communities"
                     android:src="@drawable/ic_people" />
 
 
