--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="88dp"
     android:orientation="horizontal"
     >
 
@@ -12,7 +12,6 @@
         android:layout_width="88dp"
         android:layout_height="88dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/grace"
         app:civ_border_color="@color/colorAccent"
