Updated mentors activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,20 +15,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
 
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="14dp"
-            android:text="GRACE MATHOLE, PRETORIA"
-            android:textAlignment="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
-            android:textColor="#ffff"
-            android:textSize="30dp" />
         
         <RelativeLayout
             android:layout_width="match_parent"
@@ -69,25 +60,16 @@
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/sosMessage"
+                android:id="@+id/txtuser_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="SOS Message"
+                android:hint="User name"
                 android:layout_marginBottom="10dp"
                 android:inputType="textMultiLine"
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="SOS Contacts"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />
+
 
 
 
@@ -101,10 +83,10 @@
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/emergency1"
+                android:id="@+id/txtBio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mobile Number"
+                android:hint="Bio"
                 android:inputType="phone"
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
@@ -127,27 +109,15 @@
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:textColorHint="#FFF">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/emergency3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Mobile Number"
-                android:inputType="phone"
-                android:textColor="#FFFFFF" />
-        </android.support.design.widget.TextInputLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="20dp">
+
         <Button
             android:id="@+id/btnUpdate"
             android:layout_width="wrap_content"
