--- a/app/src/main/res/menu/profile_update.xml
+++ b/app/src/main/res/menu/profile_update.xml
@@ -2,7 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+    <item android:id="@+id/updatSos"
+        android:title ="Update SOS info">
 
+    </item>
 
     <item android:id="@+id/log_out"
         android:title ="Log out">
