--- a/app/src/main/res/layout/activity_sos_details.xml
+++ b/app/src/main/res/layout/activity_sos_details.xml
@@ -17,50 +17,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="14dp"
-            android:text="GRACE MATHOLE, PRETORIA"
-            android:textAlignment="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
-            android:textColor="#ffff"
-            android:textSize="30dp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_camera"
-                android:layout_alignParentBottom="true"
-                android:layout_alignEnd="@+id/circleImageView"
-                />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal"
-                android:onClick="proPic"
-                android:scaleType="centerCrop"
-                android:src="@drawable/grace"
-                app:civ_border_color="@color/colorPrimaryDark"
-                app:civ_border_width="2dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
-
-
-
-        </RelativeLayout>
-
-
         <android.support.design.widget.TextInputLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -69,21 +27,51 @@
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/sosMessage"
+                android:id="@+id/user_updat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="SOS Message"
-                android:layout_marginBottom="10dp"
-                android:inputType="textMultiLine"
+                android:hint="GRACE MATHOLE"
+                android:inputType="phone"
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
+
+
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/circleImageView"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/ic_camera" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImageView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:onClick="proPic"
+                android:scaleType="centerCrop"
+                android:src="@drawable/grace"
+                app:civ_border_color="@color/colorPrimaryDark"
+                app:civ_border_width="2dp" />
+
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="SOS Contacts"
+            android:layout_marginBottom="15dp"
+            android:text="BIO UPDATE"
             android:textSize="18dp"
             android:textStyle="bold"
             android:textAlignment="center"
@@ -100,14 +88,17 @@
             android:layout_marginRight="50dp"
             android:textColorHint="#FFF">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/emergency1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Mobile Number"
-                android:inputType="phone"
-                android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Contact Details"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />
 
         <android.support.design.widget.TextInputLayout
 
@@ -119,10 +110,95 @@
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/emergency2"
+                android:id="@+id/cellphone_update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_call_white_24dp"
+                android:drawablePadding="10dp"
+                android:hint="Cellphone"
+                android:inputType="phone"
+                android:textColor="#FFFFFF" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:text="SOS UPDATE"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />
+
+
+
+        </RelativeLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textColorHint="#FFF">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/message_update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Message Update"
+                android:drawablePadding="10dp"
+                android:drawableLeft="@drawable/ic_mail"
+                android:inputType="phone"
+                android:textColor="#FFFFFF" />
+        </android.support.design.widget.TextInputLayout>
+
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textColorHint="#FFF">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/sos1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Mobile Number"
+                android:drawableLeft="@drawable/ic_call_white_24dp"
+                android:drawablePadding="10dp"
+                android:inputType="phone"
+                android:textColor="#FFFFFF" />
+        </android.support.design.widget.TextInputLayout>
+
+
+
+
+        <android.support.design.widget.TextInputLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textColorHint="#FFF">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/sos2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:hint="Mobile Number"
+                android:drawableLeft="@drawable/ic_call_white_24dp"
                 android:inputType="phone"
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
@@ -136,11 +212,13 @@
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/emergency3"
+                android:id="@+id/sos3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
                 android:hint="Mobile Number"
                 android:inputType="phone"
+                android:drawableLeft="@drawable/ic_call_white_24dp"
                 android:textColor="#FFFFFF" />
         </android.support.design.widget.TextInputLayout>
 
@@ -148,6 +226,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp">
+
             <Button
                 android:id="@+id/btnUpdate"
                 android:layout_width="wrap_content"
