--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,7 +40,7 @@
                 android:layout_gravity="center_horizontal"
                 android:onClick="proPic"
                 android:scaleType="centerCrop"
-                android:src="@drawable/grace"
+                android:src="@drawable/grace_mathole"
                 app:civ_border_color="@color/colorPrimaryDark"
                 app:civ_border_width="2dp" />
 
