--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/icon"
+    android:background="@drawable/untitled"
     tools:context="com.irinnovative.onepagesigninsignup.SplashActivity">
 
 
