--- a/app/src/main/res/layout/activity_support_groups.xml
+++ b/app/src/main/res/layout/activity_support_groups.xml
@@ -133,7 +133,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:onClick="support"
-                    android:src="@drawable/ic_chill" />
+                    android:src="@drawable/ic_local" />
             </TableRow>
 
             <TableRow>
@@ -169,7 +169,7 @@
                     android:layout_marginBottom="14dp"
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="Hang out"
+                    android:text="TESTIMONIES"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="#fff" />
