--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -238,7 +238,7 @@
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
                     android:layout_weight="2"
-                    android:text="Destiny Helpline for youth and students"
+                    android:text="Destiny Helpline"
                     android:textColor="#fff"
                     android:textAlignment="center"
                     android:textAllCaps="true"/>
